<resources>
    <string name="app_name">حسن\n(مقدم خدمة)</string>
    <string name="password">كلمة المرور</string>
    <string name="register_form_addresss_hint">عنوان السكن الدائم مع اقرب نقطه داله</string>
    <string name="relative_phone_hint">رقم هاتف قريب من الدرجه الاولي</string>
    <string name="add_video_2">اضافة فيديو تعريفي</string>
    <string name="id_card_pic">صورة بطاقة الهوية</string>
    <string name="front_id_card_pic">صورة بطاقة الهوية الامامية</string>
    <string name="back_id_card_pic">صورة بطاقة الهوية الخلفية</string>
    <string name="address_card_pic">صورة بطاقة السكن</string>
    <string name="front_address_card_pic">صورة بطاقة السكن الامامية</string>
    <string name="back_address_card_pic">صورة بطاقة السكن الخلفية</string>
    <string name="birth_date">تاريخ الميلاد</string>
    <string name="you_have_account">لديك حساب</string>
    <string name="done_registration_dialog">تم ارسال بياناتك بنجاح سيتم مراجعتها والتواصل معك في أقرب وقت</string>
    <string name="we_hope_you_have_a_wonderful_day">نتمني لك يوم سعيد</string>
    <string name="stop_reciving_orders">إيقاف تلقي الطلبات</string>
    <string name="enable_reciving_orders">تشغيل تلقي الطلبات</string>
    <string name="new_orders">طلبات جديدة</string>
    <string name="required_services_colon">الخدمات المطلوبة :</string>
    <string name="accept">قبول</string>
    <string name="reject">رفض</string>
    <string name="new_order">طلب جديد</string>
    <string name="select_recieving_orders_stopping_period">اختر مدة إيقاف تلقي الطلبات</string>
    <string name="are_you_sure_you_wanna_cancel_order">هل أنت متأكد من الغاء الطلب ؟</string>
    <string name="one_hour">ساعه واحدة</string>
    <string name="hours_8">8 ساعات</string>
    <string name="hours_12">12 ساعة</string>
    <string name="hours_24">24 ساعة</string>
    <string name="stop_untill_i_turn_it_off">ايقاف حتي أقوم بتشغيله</string>
    <string name="accepted_order_text_dialog">لقد قمت بالموافقة علي طلب جديد و تمت اضافته الي الطلبات الحالية</string>
    <string name="rate_of_client">تقيم العميل</string>
    <string name="accept_order">قبول الطلب</string>
    <string name="current_orders">طلبات حالية</string>
    <string name="finished_orders">طلبات سابقة</string>
    <string name="confirm_finishing_dialog">لتأكيد انتهاء العمل اضغط \'تم\' اذا قمت بتنفيذ بعض الخدمات الاضافيه غير المذكوره في الطلب برجاء اضافتها</string>
    <string name="add_services_that_has_been_executed">اضافة خدمات تم تنفيذها</string>
    <string name="finish_work">انتهاء العمل</string>
    <string name="required_aamount">المبلغ المطلوب</string>
    <string name="enter_amount_you_received">أدخل المبلغ الذي استلمته</string>
    <string name="type_down_amount">اكتب المبلغ</string>
    <string name="my_previous_works">أعمالي السابقة</string>
    <string name="my_personal_data_2">بياناتي الشخصيه</string>
    <string name="specialization_and_services">التخصص والخدمات</string>
    <string name="wallet_2">المحفظه</string>
    <string name="ratings">التقيمات</string>
    <string name="done_putting_id">تم ارفاق صور البطاقة الشخصية</string>
    <string name="send_edit_to_2">ارسال طلب تعديل للادارة</string>
    <string name="save">حفظ</string>
    <string name="save_changes">حفظ التعديلات</string>
    <string name="add_descr_about_yourself">إضافة وصف عنك</string>
    <string name="descr_about_yourself">وصف عنك</string>
    <string name="add_the_description">أضف الوصف</string>
    <string name="add_video_about_previous_works">اضف فيديو عن اعمالك السابقه</string>
    <string name="video_about_previous_works">فيديو عن اعمالك السابقه</string>
    <string name="press_here_to_add_video">اضغط هنا لاضافة الفيديو</string>
    <string name="add_images_for_previous_works">اضف صور من اعمالك السابقه ( اختياري )</string>
    <string name="images_for_previous_works">صور من اعمالك السابقه</string>
    <string name="up_to_twelve_images">حتي 12 صورة</string>
    <string name="add_images_up_to_12">اضغط هنا لاضافة الصور حتي 12 صورة</string>
    <string name="specialization_you_picked">التخصص الذي قمت باختياره</string>
    <string name="services_i_provide">الخدمات التي اقدمها</string>
    <string name="wallet_hint_4">عند وصول رصيدك الي -1000 سيتم إيقاف حسابك مباشرة حتي تقوم بتسديد المبلغ المطلوب الي إدارة التطبيق</string>
    <string name="final_review">التقيم النهائي</string>
</resources>