<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="com.maproductions.mohamedalaa.hassanp.presentation.myAccount.MyAccountFragment"

    tools:ignore="ContentDescription">

    <data>
        <variable
            name="viewModel"
            type="com.maproductions.mohamedalaa.hassanp.presentation.myAccount.viewModel.MyAccountViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:background="#F9F9F9"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:padding="16dp"
            android:clipToPadding="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                style="@style/TextTajawalMedium16"

                android:text="@string/my_personal_data_2"

                android:background="@color/white"

                android:padding="8dp"

                app:drawableEndCompat="@drawable/ic_arrow_left_with_circle_black"
                android:drawablePadding="4dp"

                android:gravity="center_vertical"

                android:clickable="true"
                android:focusable="true"
                android:onClick="@{v -> viewModel.toPersonalData(v)}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"

                style="@style/TextTajawalMedium16"

                android:text="@string/my_previous_works"

                android:background="@color/white"

                android:padding="8dp"

                app:drawableEndCompat="@drawable/ic_arrow_left_with_circle_black"
                android:drawablePadding="4dp"

                android:gravity="center_vertical"

                android:clickable="true"
                android:focusable="true"
                android:onClick="@{v -> viewModel.toMyPreviousWorks(v)}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"

                style="@style/TextTajawalMedium16"

                android:text="@string/specialization_and_services"

                android:background="@color/white"

                android:padding="8dp"

                app:drawableEndCompat="@drawable/ic_arrow_left_with_circle_black"
                android:drawablePadding="4dp"

                android:gravity="center_vertical"

                android:clickable="true"
                android:focusable="true"
                android:onClick="@{v -> viewModel.toSpecializationAndServices(v)}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"

                style="@style/TextTajawalMedium16"

                android:text="@string/wallet_2"

                android:background="@color/white"

                android:padding="8dp"

                app:drawableEndCompat="@drawable/ic_arrow_left_with_circle_black"
                android:drawablePadding="4dp"

                android:gravity="center_vertical"

                android:clickable="true"
                android:focusable="true"
                android:onClick="@{v -> viewModel.toWallet(v)}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"

                style="@style/TextTajawalMedium16"

                android:text="@string/ratings"

                android:background="@color/white"

                android:padding="8dp"

                app:drawableEndCompat="@drawable/ic_arrow_left_with_circle_black"
                android:drawablePadding="4dp"

                android:gravity="center_vertical"

                android:clickable="true"
                android:focusable="true"
                android:onClick="@{v -> viewModel.toRatings(v)}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"

                style="@style/TextTajawalMedium16"

                android:text="@string/log_out"

                android:background="@color/white"

                android:padding="8dp"

                app:drawableEndCompat="@drawable/ic_arrow_left_with_circle_black"
                android:drawablePadding="4dp"

                android:gravity="center_vertical"

                android:clickable="true"
                android:focusable="true"
                android:onClick="@{v -> viewModel.logOut(v)}"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
