<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context="com.maproductions.mohamedalaa.hassanp.presentation.home.StopRecievingOrdersDialogFragment"

    tools:ignore="ContentDescription">

    <data>
        <variable
            name="viewModel"
            type="com.maproductions.mohamedalaa.hassanp.presentation.home.viewModel.StopRecievingOrdersViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/dr_top_round_white"
        tools:backgroundTint="@color/gray"
        android:backgroundTint="#F9F9F9"

        tools:layout_gravity="bottom"

        android:padding="24dp"
        android:clipToPadding="false">

        <TextView
            android:id="@+id/titleTextView"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:gravity="center"

            style="@style/TextTajawalMedium16"

            android:text="@string/select_recieving_orders_stopping_period"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/hour1TextView"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:clickable="true"
            android:focusable="true"
            android:onClick="@{v -> viewModel.toggleSelection(1)}"

            android:layout_marginTop="16dp"

            android:padding="8dp"

            style="@style/TextTajawalMedium14"

            android:text="@string/one_hour"

            tools:drawableEndCompat="@drawable/ic_radio_checked"
            textView_setDrawableEndCompatBA="@{viewModel.selectionHour == 1 ? @drawable/ic_radio_checked : @drawable/ic_radio_not_checked}"
            android:drawablePadding="4dp"

            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/hour8TextView"

            android:clickable="true"
            android:focusable="true"
            android:onClick="@{v -> viewModel.toggleSelection(8)}"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"

            android:padding="8dp"

            style="@style/TextTajawalMedium14"

            android:text="@string/hours_8"

            tools:drawableEndCompat="@drawable/ic_radio_not_checked"
            textView_setDrawableEndCompatBA="@{viewModel.selectionHour == 8 ? @drawable/ic_radio_checked : @drawable/ic_radio_not_checked}"
            android:drawablePadding="4dp"

            app:layout_constraintTop_toBottomOf="@id/hour1TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/hour12TextView"

            android:clickable="true"
            android:focusable="true"
            android:onClick="@{v -> viewModel.toggleSelection(12)}"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"

            android:padding="8dp"

            style="@style/TextTajawalMedium14"

            android:text="@string/hours_12"

            tools:drawableEndCompat="@drawable/ic_radio_not_checked"
            textView_setDrawableEndCompatBA="@{viewModel.selectionHour == 12 ? @drawable/ic_radio_checked : @drawable/ic_radio_not_checked}"
            android:drawablePadding="4dp"

            app:layout_constraintTop_toBottomOf="@id/hour8TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/hour24TextView"

            android:clickable="true"
            android:focusable="true"
            android:onClick="@{v -> viewModel.toggleSelection(24)}"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"

            android:padding="8dp"

            style="@style/TextTajawalMedium14"

            android:text="@string/hours_24"

            tools:drawableEndCompat="@drawable/ic_radio_not_checked"
            textView_setDrawableEndCompatBA="@{viewModel.selectionHour == 24 ? @drawable/ic_radio_checked : @drawable/ic_radio_not_checked}"
            android:drawablePadding="4dp"

            app:layout_constraintTop_toBottomOf="@id/hour12TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/turnOffTextView"

            android:clickable="true"
            android:focusable="true"
            android:onClick="@{v -> viewModel.toggleSelection(0)}"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"

            android:padding="8dp"

            style="@style/TextTajawalMedium14"

            android:text="@string/stop_untill_i_turn_it_off"

            tools:drawableEndCompat="@drawable/ic_radio_not_checked"
            textView_setDrawableEndCompatBA="@{viewModel.selectionHour == 0 ? @drawable/ic_radio_checked : @drawable/ic_radio_not_checked}"
            android:drawablePadding="4dp"

            app:layout_constraintTop_toBottomOf="@id/hour24TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"

            android:background="@drawable/dr_project_round"
            style="@style/Widget.MaterialComponents.Button"

            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textAppearance="@style/TextTajawalMedium16"
            android:textColor="@color/black"

            android:onClick="@{v -> viewModel.confirm(v)}"

            app:layout_constraintTop_toBottomOf="@id/turnOffTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
