<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="com.maproductions.mohamedalaa.hassanp.presentation.myAccount.PreviousWorksFragment">

    <data>
        <variable
            name="viewModel"
            type="com.maproductions.mohamedalaa.hassanp.presentation.myAccount.viewModel.PreviousWorksViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="#F9F9F9"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"

            android:layout_width="0dp"
            android:layout_height="0dp"

            android:fillViewport="true"

            tools:ignore="ContentDescription"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottomMaterialCardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:padding="16dp"
                android:clipToPadding="false">

                <TextView
                    android:id="@+id/descTextView"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:visibility="@{viewModel.showDescFirstLook}"

                    android:text="@string/add_descr_about_yourself"

                    style="@style/TextTajawalMedium16"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:visibility="@{viewModel.showDescFirstLook}"

                    android:text="@string/optional_between_brackets"

                    style="@style/TextTajawalMedium16"

                    app:layout_constraintBottom_toBottomOf="@id/descTextView"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descTextInputLayout"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:visibility="@{viewModel.showDescFirstLook}"

                    android:minHeight="91dp"

                    android:layout_marginTop="8dp"

                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"

                    android:background="@drawable/dr_rounded_white_small"

                    android:hint="@string/add_the_description"
                    app:hintTextColor="#BFBFBF"
                    android:textColorHint="#BFBFBF"

                    app:layout_constraintTop_toBottomOf="@id/descTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@={viewModel.description}"
                        style="@style/TextTajawalRegular14"

                        android:background="@drawable/dr_rounded_white_small"

                        android:inputType="textMultiLine"
                        android:imeOptions="actionNone|flagNoFullscreen"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/alreadyExistsDescTextView"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:visibility="@{!viewModel.showDescFirstLook}"

                    android:text="@string/descr_about_yourself"

                    android:layout_marginTop="16dp"

                    style="@style/TextTajawalMedium16"

                    app:layout_constraintTop_toBottomOf="@id/descTextInputLayout"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/alreadyExistsDescTextInputLayout"

                    android:visibility="@{!viewModel.showDescFirstLook}"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:minHeight="91dp"

                    android:layout_marginTop="8dp"

                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"

                    android:background="@drawable/dr_rounded_white_small"

                    android:hint="@string/add_the_description"
                    app:hintTextColor="#BFBFBF"
                    android:textColorHint="#BFBFBF"

                    app:layout_constraintTop_toBottomOf="@id/alreadyExistsDescTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@={viewModel.description}"
                        style="@style/TextTajawalRegular14"

                        android:background="@drawable/dr_rounded_white_small"

                        android:inputType="textMultiLine"
                        android:imeOptions="actionNone|flagNoFullscreen"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/videoTextView"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/add_video_about_previous_works"

                    style="@style/TextTajawalMedium16"

                    android:layout_marginTop="16dp"
                    android:visibility="@{viewModel.showVideoFirstLook}"

                    app:layout_constraintTop_toBottomOf="@id/alreadyExistsDescTextInputLayout"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/optional_between_brackets"
                    android:visibility="@{viewModel.showVideoFirstLook}"

                    style="@style/TextTajawalMedium16"

                    app:layout_constraintBottom_toBottomOf="@id/videoTextView"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/videoValueTextView"

                    android:visibility="@{viewModel.showVideoFirstLook}"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"

                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{v -> viewModel.pickOrClearVideo(v)}"

                    android:padding="16dp"

                    android:gravity="center"

                    style="@style/TextTajawalMedium16"
                    android:textColor="#9C9C9C"

                    android:text="@string/press_here_to_add_video"

                    app:drawableTopCompat="@drawable/ic_upload_with_alpha"
                    android:drawablePadding="16dp"

                    android:background="@drawable/dr_rounded_white_small_border"

                    app:layout_constraintTop_toBottomOf="@id/videoTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/alreadyExistsVideoTextView"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:visibility="@{!viewModel.showVideoFirstLook}"

                    android:text="@string/video_about_previous_works"

                    style="@style/TextTajawalMedium16"

                    android:layout_marginTop="16dp"

                    app:layout_constraintTop_toBottomOf="@id/videoValueTextView"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/alreadyExistsVideoMaterialCardView"

                    android:layout_width="0dp"
                    android:layout_height="112dp"

                    android:layout_marginTop="16dp"

                    app:cardCornerRadius="8dp"

                    android:visibility="@{!viewModel.showVideoFirstLook}"

                    app:cardElevation="4dp"
                    app:cardMaxElevation="4dp"

                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{v -> viewModel.showVideo(v)}"

                    app:layout_constraintTop_toBottomOf="@id/alreadyExistsVideoTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="0dp"

                            android:src="@drawable/ic_logo_app_placeholder"

                            imageView_setVideoUriViaGlideOrPlaceholderMAImage="@{viewModel.videoMAImage}"

                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:src="@drawable/ic_video_indicator"
                            app:tint="@color/white"

                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_margin="8dp"

                            android:gravity="center"

                            style="@style/TextTajawalMedium12"

                            android:clickable="true"
                            android:focusable="true"
                            android:onClick="@{v -> viewModel.pickOrClearVideo(v)}"

                            android:text="@string/edit"

                            android:padding="4dp"

                            app:drawableStartCompat="@drawable/ic_edit_black_24dp"
                            android:drawablePadding="4dp"

                            android:background="@drawable/dr_rounded_for_video"

                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/imagesTextView"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:text="@string/add_images_for_previous_works"

                    style="@style/TextTajawalMedium16"

                    android:layout_marginTop="16dp"
                    android:visibility="@{!viewModel.showImagesFirstLook}"

                    app:layout_constraintTop_toBottomOf="@id/alreadyExistsVideoMaterialCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/imagesValueTextView"

                    android:visibility="@{viewModel.showImagesPicker}"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"

                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{v -> viewModel.pickImages(v)}"

                    android:padding="16dp"

                    android:gravity="center"

                    style="@style/TextTajawalMedium16"
                    android:textColor="#9C9C9C"

                    android:text="@string/add_images_up_to_12"

                    app:drawableTopCompat="@drawable/ic_upload_with_alpha"
                    android:drawablePadding="16dp"

                    android:background="@drawable/dr_rounded_white_small_border"

                    app:layout_constraintTop_toBottomOf="@id/alreadyExistsImagesTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/alreadyExistsImagesTitle"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/images_for_previous_works"

                    style="@style/TextTajawalMedium16"

                    android:layout_marginTop="16dp"
                    android:visibility="@{viewModel.showImagesFirstLook}"

                    app:layout_constraintTop_toBottomOf="@id/imagesTextView"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/up_to_twelve_images"
                    android:visibility="@{viewModel.showImagesFirstLook}"

                    style="@style/TextTajawalMedium16"

                    app:layout_constraintBottom_toBottomOf="@id/alreadyExistsImagesTitle"
                    app:layout_constraintTop_toTopOf="@id/alreadyExistsImagesTitle"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:clipToPadding="false"

                    android:scrollbars="vertical"
                    tools:itemCount="12"
                    tools:orientation="vertical"
                    tools:listitem="@layout/item_image_del_2"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                    app:layout_constraintTop_toBottomOf="@id/imagesValueTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bottomMaterialCardView"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:cardMaxElevation="16dp"
            app:cardElevation="16dp"

            app:cardCornerRadius="0dp"

            app:cardBackgroundColor="@color/white"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmButton"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/dr_project_round"
                style="@style/Widget.MaterialComponents.Button"

                android:text="@string/save"
                android:textAllCaps="false"
                android:textAppearance="@style/TextTajawalMedium16"
                android:textColor="@color/black"

                android:onClick="@{v -> viewModel.save(v)}"

                android:layout_margin="16dp"/>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
